fix form validation on create post

--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                         <ul class="list-inline text-center">
                             <!-- twitter link -->
                             <li class="list-inline-item">
-                                <a href="https://twitter.com">
+                                <a href="https://twitter.com" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -103,7 +103,7 @@
                             </li>
                             <!-- facebook link -->
                             <li class="list-inline-item">
-                                <a href="https://www.facebook.com/">
+                                <a href="https://www.facebook.com/" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -112,7 +112,7 @@
                             </li>
                             <!-- github link -->
                             <li class="list-inline-item">
-                                <a href="https://github.com/">
+                                <a href="https://github.com/" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
